--- a/app/src/main/res/layout/activity_estoque.xml
+++ b/app/src/main/res/layout/activity_estoque.xml
@@ -20,8 +20,8 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/borda_arrendondada"
-                android:fontFamily="@font/itim"
+                android:background="@drawable/borda_arrendondada_inferior_verde_escuro"
+                android:fontFamily="sans-serif"
                 android:padding="15dp"
                 android:text="Estoque"
                 android:textAlignment="center"
