--- a/app/src/main/res/layout/activity_comprovante_pedido.xml
+++ b/app/src/main/res/layout/activity_comprovante_pedido.xml
@@ -69,15 +69,15 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/itim"
         android:layout_marginTop="5dp"
+        android:fontFamily="@font/itim"
         android:text="Resumo"
         android:textColor="#0F5929"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/containerResumo"
         app:layout_constraintTop_toBottomOf="@+id/containerQRcode"
         app:layout_constraintVertical_bias="0.0" />
 
