--- a/app/src/main/res/layout/sample.xml
+++ b/app/src/main/res/layout/sample.xml
@@ -9,8 +9,10 @@
 
     <TextView
         android:id="@+id/txtTitulo"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/itim"
         android:textAlignment="center"
         android:textColor="#0F5929"
@@ -35,8 +37,10 @@
 
     <TextView
         android:id="@+id/txtIngredientes"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/itim"
         android:textColor="#0F5929"
         app:layout_constraintBottom_toBottomOf="parent"
